Wstępne zrytmikarzowanie motywu

--- a/pages/404.md
+++ b/pages/404.md
@@ -5,7 +5,6 @@ toc: false
 footer: false
 ---
 
-# 404 - Page Not Found
+# 404 - Strony nie znaleziono
 
-
-
+Zbłądziłeś. Ogarnij się, wróć na główną i spróbuj jeszcze raz.
